--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_FIREBASE_API_KEY=your_firebase_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_API_KEY=AIzaSyCFOuWhceUWtjaAXQUwP94pC3aSSoEb-XY
+VITE_FIREBASE_AUTH_DOMAIN=time-tracker-1d747.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=time-tracker-1d747
+VITE_FIREBASE_STORAGE_BUCKET=time-tracker-1d747.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=706276837032
+VITE_FIREBASE_APP_ID=1:706276837032:web:841e934396f652285d649d
